objects/City__c.object
<CustomObject>
    <fields>
        <fullName>CityCenter__c</fullName>
        <description>Location of the geographical center of the city</description>
        <label>CityCenter</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Density__c</fullName>
        <label>Density</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zipcodes__c</fullName>
        <label>Zipcodes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>City</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>